fixed payment input on small screen

--- a/source/sass/blocks/back-project.scss
+++ b/source/sass/blocks/back-project.scss
@@ -11,7 +11,6 @@
   }
 }
 
-
 .back-project__container {
   position: relative;
   top: 121px;
@@ -110,6 +109,10 @@
   display: flex;
   align-items: center;
 
+  @media (max-width: 425px) {
+    flex-direction: column;
+  }
+
   @media (min-width: 600px) {
     justify-content: flex-end;
   }
@@ -148,6 +151,11 @@
   background-image: url(../img/icon-input.svg);
   background-repeat: no-repeat;
   background-position: 24px center;
+
+  @media (max-width: 425px) {
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
 
   &:active,
   &:hover,
